# controllers/vote.go
@@ -10,6 +10,17 @@ import (
 	"github.com/go-playground/validator/v10"
 )
 
+// PostVoteController 点赞投票接口
+// @Summary 点赞投票接口
+// @Description 根据帖子id和投票信息进行点赞、踩
+// @Tags 帖子相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param object body models.ParamVoteData true "翻译任务id参数"
+// @Security ApiKeyAuth
+// @Success 200 {object} _ResponseMsg
+// @Router /vote [post]
 func PostVoteController(c *gin.Context) {
 	p := new(models.ParamVoteData)
 	if err := c.ShouldBindJSON(p); err != nil {
